# archgen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
cli/: index.ts  prompts.ts
cli/command/: index.ts  list.ts
core/: archgen.ts  file-system.ts  logger.ts  registry.ts  template-engine.ts  validation.ts
plugins/node/: config.ts  index.ts
plugins/python/: config.ts  index.ts
plugins/python/template/base/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
plugins/python/template/base/app/constants/: error_codes.py
plugins/python/template/base/app/core/: config.py  database.py  exception.py  logging.py  redis_client.py
plugins/python/template/base/app/middleware/: __init__.py  auth_middleware.py  error_middleware.py  logging_middleware.py  rate_limit_middleware.py
plugins/python/template/base/app/models/: base.py  user.py
plugins/python/template/base/app/routes/: __init__.py  health.py
plugins/python/template/base/app/routes/api/v1/: __init__.py  auth.py  users.py
plugins/python/template/base/app/schedulers/: __init__.py  base_scheduler.py  example_job.py
plugins/python/template/base/app/schemas/: auth.py  base.py  user.py
plugins/python/template/base/app/services/: auth_service.py  user_service.py
plugins/python/template/base/app/utils/: security.py
plugins/python/template/base/migrations/: env.py
plugins/python/template/base/scripts/: init_db.py
tests/unit/: registry.test.ts  template-engine.test.ts  validation.test.ts
types/: index.ts
(+74 files in other folders)
